cabal-version:       3.0
name:                svgone
version:             0.1.0.0

common common
    build-depends:
        base ^>= 4.14.1,
        bytestring ^>= 0.10.12,
        containers ^>= 0.6.2,
        directory ^>= 1.3.6,
        filepath ^>= 1.4.2,
        extra ^>= 1.7.9,
        process ^>= 1.6.9,
        lens ^>= 4.19.2,
        mtl ^>= 2.2.2,
        text ^>= 1.2.4,
        linear ^>= 1.21.3,
        pretty-simple ^>= 4.0.0,
        reanimate-svg ^>= 0.13.0,
        safe ^>= 0.3.19,
    ghc-options:
        -Wall
        -fdefer-typed-holes
        -threaded
    default-language: Haskell2010
    default-extensions:
        ConstraintKinds
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralisedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        PartialTypeSignatures
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeFamilyDependencies
        TypeOperators
        ViewPatterns

executable svgone
    import: common
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        svgone

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Svgone.Processors.MergePaths
        Svgone.Processors.CollapseGroups
