cabal-version:       3.0
name:                svgone
version:             0.1.0.0

common common
    build-depends:
        base ^>= 4.14.1,
        bytestring ^>= 0.10.12,
        containers ^>= 0.6.2,
        directory ^>= 1.3.6,
        extra ^>= 1.7.9,
        filepath ^>= 1.4.2,
        generic-lens ^>= 2.0,
        lens ^>= 4.19.2,
        linear ^>= 1.21.3,
        mtl ^>= 2.2.2,
        pretty-simple ^>= 4.0.0,
        process ^>= 1.6.9,
        reanimate-svg ^>= 0.13.0,
        safe ^>= 0.3.19,
        text ^>= 1.2.4,
    ghc-options:
        -Wall
        -fdefer-typed-holes
        -threaded
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        ConstraintKinds
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralisedNewtypeDeriving
        ImportQualifiedPost
        InstanceSigs
        LambdaCase
        MultiParamTypeClasses
        OverloadedLabels
        OverloadedStrings
        PartialTypeSignatures
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeFamilyDependencies
        TypeOperators
        ViewPatterns

executable svgone
    import: common
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        svgone

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Svgone
        Svgone.Types
        Svgone.Processors.MergePaths
        Svgone.Processors.CollapseGroups
    other-modules:
        Util
